moze da se kaze deka e gotovo, treba mozebi uste malce da se dosredi no gore dole toa e.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -185,20 +185,34 @@
 
     <!--    Reservation    -->
     <div class="reservation">
-    <div class="reservation__title">
+        <div class="reservation__title">
             <h1 style="color: red; font-size: 30px; font-family: monospace; letter-spacing: 3px;">MAKE A RESERVATION</h1><br>
             <h3 style="color: grey; font-size: 17px; font-family: sans-serif; letter-spacing: 1px;">Lorem ipsum dolor sit amet, consectetur adipiscing.</h3>
         </div>
         <div class="reservation__container">
-            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Your Name</h1></div>
-            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Your Mail</h1></div>
-            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Guests (Amount)</h1></div>
-            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Date</h1></div>
-            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Time</h1></div>
-            <div class="reservation__smallContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Phone</h1></div>
-            <div class="reservation__bigContainer"><h1 style="color: white; font-size: 15px; font-family: monospace;">Special Requests</h1></div>
+            <div class="reservation__smallContainer">
+                <h1 style="color: white; font-size: 15px; font-family: monospace;">Your Name</h1>
+            </div>
+            <div class="reservation__smallContainer">
+                <h1 style="color: white; font-size: 15px; font-family: monospace;">Your Mail</h1>
+            </div>
+            <div class="reservation__smallContainer">
+                <h1 style="color: white; font-size: 15px; font-family: monospace;">Guests (Amount)</h1>
+            </div>
+            <div class="reservation__smallContainer">
+                <h1 style="color: white; font-size: 15px; font-family: monospace;">Date</h1>
+            </div>
+            <div class="reservation__smallContainer">
+                <h1 style="color: white; font-size: 15px; font-family: monospace;">Time</h1>
+            </div>
+            <div class="reservation__smallContainer">
+                <h1 style="color: white; font-size: 15px; font-family: monospace;">Phone</h1>
+            </div>
+            <div class="reservation__bigContainer">
+                <h1 style="color: white; font-size: 15px; font-family: monospace;">Special Requests</h1>
+            </div>
             <div class="reservation__button">
-            <button class="reservationB">CONFIRM</button>
+                <button class="reservationB">CONFIRM</button>
             </div>
         </div>
     </div>
@@ -207,20 +221,24 @@
     <!--    Blog    -->
     <div class="blog">
         <div class="blog__title">
-        <br><br><h1 style="color: white; font-size: 30px; font-family: monospace; letter-spacing: 3px;">Blog</h1>
+            <br><br>
+            <h1 style="color: white; font-size: 30px; font-family: monospace; letter-spacing: 3px;">Blog</h1>
         </div>
         <div class="blog__container">
             <div class="blog__date">
-                <br><br><h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">04</h1>
+                <br><br>
+                <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">04</h1>
                 <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">MAR</h1>
                 <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">2018</h1>
             </div>
             <div class="blog__header">
-            <br><h3 style="color: black; font-size: 25px; font-family: sans-serif; letter-spacing: 1px;">Lorem ipsum dolor sit amet, consectetur adipiscing.</h3>
+                <br>
+                <h3 style="color: black; font-size: 25px; font-family: sans-serif; letter-spacing: 1px;">Lorem ipsum dolor sit amet, consectetur adipiscing.</h3>
             </div>
             <div class="blog__image"></div>
             <div class="blog__text">
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor.</p><br>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi.</p><br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor.</p><br>
                 <p style="color: red">
                     <b style="color: black">By</b> Bojan Spasovski
                     <b style="color: black"> 123 comments</b> Share
@@ -230,16 +248,19 @@
         </div>
         <div class="blog__container">
             <div class="blog__date">
-                <br><br><h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">04</h1>
+                <br><br>
+                <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">04</h1>
                 <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">MAR</h1>
                 <h1 style="color: white; font-size: 30px; font-family: sans-serif; letter-spacing: 3px;">2018</h1>
             </div>
             <div class="blog__header">
-            <br><h3 style="color: black; font-size: 25px; font-family: sans-serif; letter-spacing: 1px;">Lorem ipsum dolor sit amet, consectetur adipiscing.</h3>
+                <br>
+                <h3 style="color: black; font-size: 25px; font-family: sans-serif; letter-spacing: 1px;">Lorem ipsum dolor sit amet, consectetur adipiscing.</h3>
             </div>
             <div class="blog__image"></div>
             <div class="blog__text">
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi.</p><br><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor.</p><br>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor, sed tincidunt massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi.</p><br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.Aliquam feugiat, erat malesuada volutpat ultrices, orci mi imperdiet dolor.</p><br>
                 <p style="color: red">
                     <b style="color: black">By</b> Bojan Spasovski
                     <b style="color: black"> 123 comments</b> Share
@@ -250,14 +271,17 @@
     </div>
     <div class="clearfix"></div>
 
+    <!--    Contact    -->
     <div class="contact">
         <div class="contact__title">
-            <br><h1>Testimonials</h1>
+            <br>
+            <h1>Testimonials</h1>
         </div>
         <div class="contact__containerLeft">
             <div class="contact__containerLeftText">
                 <div class="contact__text1">
-                    <br><h1 style="font-family: 'Anton', sans-serif;">Great product, very fast service</h1><br>
+                    <br>
+                    <h1 style="font-family: 'Anton', sans-serif;">Great product, very fast service</h1><br>
                     <p style="font-size: 18px; opacity: 0.9; font-style: italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada.</p>
                 </div>
             </div>
@@ -265,11 +289,13 @@
                 <div class="contact__image"></div>
                 <br><br><br><br>
                 <h1 style="color: red; font-family: sans-serif;">Bojan Spasovski</h1>
-                <br><h1 style="color: red; font-family: sans-serif; font-style: italic">Macedonia</h1>
+                <br>
+                <h1 style="color: red; font-family: sans-serif; font-style: italic">Macedonia</h1>
             </div>
             <div class="contact__containerLeftText">
                 <div class="contact__text1">
-                    <br><h1 style="font-family: 'Anton', sans-serif;">Great product, very fast service</h1><br>
+                    <br>
+                    <h1 style="font-family: 'Anton', sans-serif;">Great product, very fast service</h1><br>
                     <p style="font-size: 18px; opacity: 0.9; font-style: italic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis. Aliquam feugiat, erat malesuada.</p>
                 </div>
             </div>
@@ -277,12 +303,14 @@
                 <div class="contact__image"></div>
                 <br><br><br><br>
                 <h1 style="color: red; font-family: sans-serif;">Bojan Spasovski</h1>
-                <br><h1 style="color: red; font-family: sans-serif; font-style: italic">Macedonia</h1>
+                <br>
+                <h1 style="color: red; font-family: sans-serif; font-style: italic">Macedonia</h1>
             </div>
         </div>
         <div class="contact__containerRight">
             <div class="contact__contactRight">
-                <br><br><h1 style="color: white; font-size: 30px; font-family: 'Anton', sans-serif;">Contact</h1>
+                <br><br>
+                <h1 style="color: white; font-size: 30px; font-family: 'Anton', sans-serif;">Contact</h1>
                 <div class="contact__box"></div>
                 <div class="contact__box"></div>
                 <div class="contact__box"></div>
@@ -291,7 +319,86 @@
             </div>
         </div>
     </div>
+    <div class="clearfix"></div>
 
+    <!--    Footer    -->
+    <div class="bottom">
+        <div class="bottom__container">
+            <div class="bottom__title">
+                <br>
+                <h1>STAY CONNECTED</h1>
+            </div>
+            <div class="bottom__text1">
+                <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.</p>
+            </div>
+                    <i class="fa fa-facebook-square fa-lg"></i><br><br>
+                    <i class="fa fa-twitter-square fa-lg"></i><br><br>
+                    <i class="fa fa-glide   fa-lg"></i><br><br>
+                    <i class="fa fa-google-plus-square fa-lg"></i><br><br>
+                    <i class="fa fa-tumblr-square fa-lg"></i><br><br>
+                    <i class="fa fa-trello fa-lg"></i>
+        </div>
+        <div class="bottom__container">
+            <div class="bottom__title">
+                <br>
+                <h1>TWITTER</h1>
+            </div>
+            <div class="bottom__text">
+                <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.</p>
+                <h1 style="opacity: 0.4; font-size: 18px;">1 HOUR AGO</h1>
+            </div>
+            <div class="bottom__text">
+                <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.</p>
+                <h1 style="opacity: 0.4; font-size: 18px;">1 HOUR AGO</h1>
+            </div>
+            <div class="bottom__text">
+                <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.</p>
+                <h1 style="opacity: 0.4; font-size: 18px;">1 HOUR AGO</h1>
+            </div>
+            <div class="bottom__text">
+                <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi feugiat sodales mi, a fermentum magna rutrum quis.</p>
+                <h1 style="opacity: 0.4; font-size: 18px;">1 HOUR AGO</h1>
+            </div>
+        </div>
+        <div class="bottom__container">
+            <div class="bottom__title">
+                <br>
+                <h1>HIGHLIGHTS</h1>
+            </div>
+            <div class="bottom__imgbig"></div>
+            <div class="bottom__imgtext">
+                <br><br><p>Lorem ipsum dolor sit amet, consecte.</p>
+            </div>
+            <div class="bottom__imgbig"></div>
+            <div class="bottom__imgtext">
+                <br><br><p>Lorem ipsum dolor sit amet, consecte.</p>
+            </div>
+            <div class="bottom__imgbig"></div>
+            <div class="bottom__imgtext">
+                <br><br><p>Lorem ipsum dolor sit amet, consecte.</p>
+            </div>
+        </div>
+        <div class="bottom__container">
+            <div class="bottom__title">
+                <br>
+                <h1>INSTAGRAM</h1>
+            </div>
+            <div class="bottom__imgtop"></div>
+            <div class="bottom__imgmargin"></div>
+            <div class="bottom__imgmargin"></div>
+            <div class="bottom__imgtop"></div>
+            <div class="bottom__imgmargin"></div>
+            <div class="bottom__imgmargin"></div>
+            <div class="bottom__imgtop"></div>
+            <div class="bottom__imgmargin"></div>
+            <div class="bottom__imgmargin"></div>
+        </div>
+    </div>
 </body>
 
 <script src="https://use.fontawesome.com/7c170cd744.js"></script>
